--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,4 +31,5 @@ activity = { group = "androidx.activity", name = "activity", version.ref = "acti
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+google-java-format = { id = "com.github.sherter.google-java-format", version = "0.9" }
 
